Autka_android v3.1 - menu + sensor + tap Class names changed

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity2">
 
-    <pl.pwr.s241936.autka_android_v2.Game
-        android:id="@+id/game"
+    <pl.pwr.s241936.autka_android_v2.Game_sensor
+        android:id="@+id/game_sensor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
