--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -6,11 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity3">
 
-    <pl.pwr.s241936.autka_android_v2.Game_buttons
-        android:id="@+id/game_buttons"
+    <pl.pwr.s241936.autka_android_v2.Game_tap
+        android:id="@+id/game_tap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
